--- a/templates/form.html
+++ b/templates/form.html
@@ -5,7 +5,7 @@
 		<script src="https://code.jquery.com/jquery-3.5.1.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
 		<script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.1/dist/umd/popper.min.js" integrity="sha384-9/reFTGAW83EW2RDu2S0VKaIzap3H66lZH81PoYlFhbGU+6BZp6G7niu735Sk7lN" crossorigin="anonymous"></script>
 		<script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js" integrity="sha384-B4gt1jrGC7Jh4AgTPSdUtOBvfO8shuf57BaghqFfPlYxofvL8/KUEfYiJOMMV+rV" crossorigin="anonymous"></script>
-		<title>Heart Disease Test</title>
+		<title>Breast Cancer Test</title>
 	</head>
 	<body>
 	<!-- Java Script -->	
@@ -27,47 +27,51 @@
 				  <div class="card card-body" >
 					  <div class="form-group  row">
 						<div class="col-sm-3">
-							<label for="age">Clump Thickness</label>
-							<input type="number" class="form-control" id="age" name="age" required>
+							<label for="radius_mean">Clump Thickness</label>
+							<input type="number" class="form-control" id="radius_mean" name="radius_mean" required>
 						</div>
 						<div class="col-sm-3">
-							<label for="sex">Uniformity of Cell Size</label>
-							<input type="number" class="form-control" id="age" name="age" required>
+							<label for="texture_mean">Uniformity of Cell Size</label>
+							<input type="number" class="form-control" id="texture_mean" name="texture_mean" required>
 					   </div>
 					  </div>
 					  <br>
 					  <div class="form-group  row">
 						  <div class="col-sm">
-							<label for="cp">Uniformity of Cell Shape</label>
-							<input type="number" class="form-control" id="age" name="age" required>
+							<label for="perimeter_mean">Uniformity of Cell Shape</label>
+							<input type="number" class="form-control" id="perimeter_mean" name="perimeter_mean" required>
 						  </div>
 						  <div class="col-sm">
-							<label for="trestbps">Marginal Adhesion</label>
-							<input type="number" class="form-control" id="trestbps" name="trestbps"  required>
+							<label for="area_mean">Marginal Adhesion</label>
+							<input type="number" class="form-control" id="area_mean" name="area_mean"  required>
 						  </div>
 						  <div class="col-sm">
-							<label for="chol">Single Epithelial Cell Size</label>
-							<input type="number" class="form-control" id="chol" name="chol" required>
+							<label for="smoothness_mean">Single Epithelial Cell Size</label>
+							<input type="number" class="form-control" id="smoothness_mean" name="smoothness_mean" required>
 						  </div>
 						  <div class="col-sm">
-							<label for="fbs">Bare Nuclei</label>
-							<input type="number" class="form-control" id="chol" name="chol" required>
+							<label for="compactness_mean">Bare Nuclei</label>
+							<input type="number" class="form-control" id="compactness_mean" name="compactness_mean" required>
 						</div>
 					  </div>
 					  
 					  <br>
 					  <div class="form-group row">
 							<div class="col-sm">
-								<label for="restecg">Bland Chromatin </label>
-								<input type="number" class="form-control" id="chol" name="chol" required>
+								<label for="concavity_mean">Bland Chromatin </label>
+								<input type="number" class="form-control" id="concavity_mean" name="concavity_mean" required>
 							  </div>
 							  <div class="col-sm">
-								<label for="thalach">Normal Nucleoli</label>
-								<input type="number" class="form-control" id="thalach" name="thalach" required>
+								<label for="concave points_mean">Normal Nucleoli</label>
+								<input type="number" class="form-control" id="concave points_mean" name="concave points_mean" required>
 							  </div>
 							  <div class="col-sm">
-								<label for="exang">Mitoses</label>
-								<input type="number" step="any" class="form-control" id="exang" name="exang" required>
+								<label for="symmetry_mean">Mitoses</label>
+								<input type="number" step="any" class="form-control" id="symmetry_mean" name="symmetry_mean" required>
+							  </div>
+							  <div class="col-sm">
+								<label for="fractal_dimension_mean">fractal_dimension_mean</label>
+								<input type="number" step="any" class="form-control" id="fractal_dimension_mean" name="fractal_dimension_mean" required>
 							  </div>
 						  </div>
 						  <br>
