--- a/templates/index.html
+++ b/templates/index.html
@@ -95,8 +95,10 @@
 
         <div class="container text-center hearderset">
         	<h2 class="text-white">Welcome to  </h2>
-        	<h1 class="text-white">  Breast Cancer Diagnosis And Detection </h1>
-        	<button class="btn btn-warning text-white btn-lg ">Get Checked Today</button>
+			<h1 class="text-white">  Breast Cancer Diagnosis And Detection </h1>
+			<form class='form_code'action="/predict" method="GET">
+				<button class="btn btn-warning text-white btn-lg ">Get Checked Today</button>
+			</form>
         </div>
 
     </div>
